# map-dump

./: .gitignore  Cargo.toml  README.md  glove.py  retailers.txt
analysis/: plots.ipynb
classifier/: __main__.py
glove/: __main__.py  loss.py  sparse.py  sparse_matmul.py  sparse_matmul_test.py  sparse_test.py
src/: array_util.rs  bing_maps.rs  categories.rs  cooccurrence.rs  discover.rs  discover_all.rs  geo_coord.rs  location_index.rs  main.rs  npz_file.rs  scrape.rs  task_queue.rs  website.rs
src/web_assets/: 404.html  index.html  script.js  style.css
