[package]
edition = "2021"
name = "map_dump"
description = "Doing some scraping and data analysis in Rust."
version = "0.1.0"
authors = ["Alex Nichol <unixpickle@gmail.com>"]

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "3.2.20", features=["derive"] }
futures-core = { version = "0.3.23" }
futures-util = { version = "0.3.23" }
http = { version = "0.2.8" }
hyper = { version = "0.14.20", features=["full"] }
ndarray = { version = "0.15.6" }
num-traits = { version = "0.2.15" }
rand = { version="0.8.5", features=["std_rng"] }
reqwest = { version="0.11.11", default-features = false, features = ["rustls-tls-native-roots"] }
scraper = { version="0.13.0" }
serde = { version="1.0", features = ["derive"] }
serde_json = { version="1.0" }
tokio = { version = "1.20.1", features=["full"] }
url = { version = "2.3.1" }
zip = { version = "0.6.3" }